# pyecc

./: .gitignore  Dockerfile  MANIFEST.in  README.md  requirements.txt  setup.py  test_ecc.py  test_spna126.py
.github/workflows/: gen_ecc.yml
pyecc/: __init__.py  cli.py  config.yaml  pyecc.py
test/: CMakeLists.txt  crt0.S  linker_script.ld  test_spna126.py  test_tms570lc4357.py  toolchain.cmake
test_input/: CMakeLists.txt  crt0.S  linker_script.ld  spna126.S  toolchain.cmake
test_input/nowECC/: armv7r_be_F021_16M_ADD.elf  armv7r_le_F021_16M_ADD.elf  armv7r_le_F021_16M_NOADD.elf
